FIX: Fix paginator visibility logic
Using @if was removing element from dom failing the paginator event subscription.

--- a/webgui/webapp/src/app/components/filter-selection-dialog/filter-selection-dialog.component.scss
+++ b/webgui/webapp/src/app/components/filter-selection-dialog/filter-selection-dialog.component.scss
@@ -10,3 +10,7 @@
     max-height: 100%;
   }
 }
+
+.hide {
+  @apply h-0 invisible my-0 py-0;
+}
